--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@tailwindcss/vite": "^4.1.13",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "tailwindcss": "^4.1.13"
+    "tailwindcss": "^4.1.13",
+    "framer-motion": "^12.23.22"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
